--- a/wp-content/themes/grocery/css/main.css
+++ b/wp-content/themes/grocery/css/main.css
@@ -557,7 +557,7 @@ ul.dropdown-menu.drp-mnu li a i {
 .btn-danger.my-cart-btn:focus {
     outline: none;
 }
-.snipcart-details input.button {
+.snipcart-details input.button, .snipcart-details a.add_to_cart_button {
     font-size: 14px;
     color: #fff;
     background: #FA1818;
@@ -569,9 +569,16 @@ ul.dropdown-menu.drp-mnu li a i {
     text-transform: uppercase;
     padding: .5em 0;
     outline: none;
+    padding: 10px 20px;
 }
-.agile_top_brand_left_grid:hover .snipcart-details input.button,.snipcart-details input.button:hover{
+.agile_top_brand_left_grid:hover .snipcart-details input.button,.snipcart-details a.add_to_cart_button:hover{
     background: #84C639;
+}
+.snipcart-details a.added_to_cart{
+	background: #84c639;
+    color: #fff;
+    margin: 15px;
+    padding: 10px 20px;
 }
 .product_list_header input.button {
     color: #fff;
